--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ repository = "https://github.com/dgraham/stache"
 license = "MIT"
 
 [dependencies]
+getopts = "~0.2"
 pest = "~0.4"
+regex = "~0.1"
 
 [lib]
 name = "stache"
