--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,11 @@ repository = "https://github.com/dgraham/stache"
 license = "MIT"
 
 [dependencies]
-getopts = "~0.2"
-pest = "~0.4"
-regex = "~0.2"
-tempdir = "~0.3"
-yaml-rust = "~0.3"
+getopts = "0.2"
+pest = "0.4"
+regex = "0.2"
+tempdir = "0.3"
+yaml-rust = "0.3"
 
 [lib]
 name = "stache"
