--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,9 @@ matrix:
   allow_failures:
     - rust: nightly
 before_script:
-  - export PATH=$PATH:$HOME/.cargo/bin
-  - command -v rustfmt || cargo install rustfmt
+  - rustup component add rustfmt-preview
 script:
-  - cargo fmt -- --write-mode=diff
+  - cargo fmt --all -- --check
   - cargo build --verbose
   - cargo test --verbose
 cache: cargo
-dist: trusty
